{{$NEXT}}

- Inlined coercions would attempt to coerce for every type which matched the
  value given, instead of stopping after the first type. Fixed by Graham Knop
  (GH #11).

- Inlined coercions did not include the inline environment variables needed by
  the type from which the coercion was being performed. Fixed by Graham Knop
  (GH #8).


0.35     2017-02-12

- Added Specio::Subs, a module which allows you to turn one or more library's
  types into subroutines like is_Int() and to_Int().

- Added an inline_coercion method to Specio constraints.


0.34     2017-01-29

- Packages with Specio::Exporter as their parent can now specify additional
  arbitrary subs to exporter. See the Specio::Exporter docs for details.

- Importing the same library twice in a given package would throw an
  exception. The second attempt to import is now ignored.

- Added an alpha implementation of structured types. See
  Specio::Library::Structured for details.


0.33     2017-01-24

- Fixed a mistake in the SYNOPSIS for Specio::Declare. The example for the
  *_isa_type helpers was not correct.

- Removed the alpha warning from the docs. This is being used by enough of my
  modules on CPAN that I don't plan on doing any big breaking changes without
  a deprecation first.


0.32     2017-01-12

- Fixed a bug in the inlining for types create by any_can_type() and
  object_can_type(). This inlining mostly worked by accident because of some
  List::Util XS magic, but this broke under the debugger. Reported by
  Christian Walde (GH #6) and Chan Wilson
  (https://github.com/houseabsolute/DateTime.pm/issues/49).


0.31     2016-11-05

- The stack trace contained by Specio::Exception objects no longer includes a
  stack frames for the Specio::Exception package.

- Made the inline_environment() and description() methods public on type and
  coercion objects.


0.30     2016-10-15

- Fix a bug with the Sub::Quoted sub returned by $type->coercion_sub. If a